Wed Nov 17 15:16:48 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regint.h (OnigOpInfoType): constify name.

	* regcomp.c (op2name): constify return value.

	* regcomp.c (onig_print_compiled_byte_code): use PRIuPTR and
	  uintptr_t to clean warnings.

	* regcomp.c (print_indent_tree): use PRIxPTR and intptr_t.

	* regexec.c (match_at): use PRIdPTR and intptr_t.

Wed Nov 17 09:49:10 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/shift_jis.c (property_name_to_ctype): fix memory leak.

	* enc/euc_jp.c (property_name_to_ctype): ditto.

Tue Nov 17 08:54:04 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Upgrading output encoding as needed.  [ruby-core:33135]

Tue Nov 16 22:30:39 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_insnhelper.c (vm_throw): remove fear of undefined behavior :-)
	  Coverity Scan found this bug.

Tue Nov 16 09:33:00 2010  Kenta Murata <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (to_digits): avoid unused
	variables warning, reported by Aaron Patterson.

Tue Nov 16 06:39:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (PACK_ITEM_ADJUST): return nil not result array and yield
	  values if block is given.  [ruby-core:33193]

Tue Nov 16 00:21:20 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* regparse.c (and_cclass, or_cclass): fix memory leak.  Coverity Scan
	  found this bug.  [ruby-dev:42579]

Tue Nov 16 00:07:32 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* gc.c (assign_heap_slot): fix fear of memory leak and memory
	  violation.  Coverity Scan found this bug.

Mon Nov 15 23:54:45 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* eval_intern.h (CHECK_STACK_OVERFLOW): it was not intended to add
	  size_t to a pointer typed VALUE*.  Coverity Scan found this defect.

Mon Nov 15 23:41:21 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (iseq_set_exception_local_table, iseq_set_local_table,
	  rb_iseq_build_from_ary): fix type inconsistency (which is benign
	  because sizeof(ID) == sizeof(ID*), though).  Coverity Scan found